# openrouter_chat_bot

./: .dockerignore  .env.example  Dockerfile  README.md  TEST_FIX_INSTRUCTIONS.md  conftest.py  docker-compose.yml  pyproject.toml  sitecustomize.py  test_compat_plugin.py  test_compat_runtime.py
migrations/: env.py  script.py.mako
scripts/: backup_db.sh  healthcheck.sh  init_db.py  run_polling.sh
src/bot/: bootstrap.py  main.py
src/bot/clients/: openrouter.py
src/bot/config/: __init__.py  logging.py  settings.py
src/bot/core/: __init__.py  constants.py  enums.py  exceptions.py  typing.py
src/bot/db/: models.py  schema.sql  sqlite.py
src/bot/handlers/: __init__.py
src/bot/i18n/: messages.py
src/bot/middleware/: chat_context.py  errors.py  observability.py  permissions.py  request_lock.py  (+1 more)
tests/: conftest.py
tests/integration/: conftest.py  test_admin_control_language.py  test_admin_models.py  test_ask_flow.py  test_ask_identity.py  test_ask_localized_errors.py  test_fun_commands.py  test_help_command.py  test_phase3_handlers.py  test_status_command.py  test_summary_commands.py  test_threaded_replies.py  test_truth_commands.py
tests/unit/: conftest.py  test_ask_quality_fallback.py  test_audit_log_repository.py  test_chat_settings_preferences.py  test_context_builder.py  test_i18n_messages.py  test_model_registry.py  test_model_router.py  test_openrouter_client.py  test_orchestrator.py  test_orchestrator_phase3.py  test_output_validator.py  test_permissions.py  test_prompt_policies.py  test_reply_sender.py  test_scaffold_imports.py  test_settings.py  test_status_service.py  test_telegram_split.py  test_text_cleanup.py  test_throttling.py
(+33 files in other folders)
