[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-chat-bot"
version = "0.1.0"
description = "Phase 0 scaffold for a Telegram AI bot using aiogram 3 and OpenRouter."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13,<4",
  "aiosqlite>=0.20,<1",
  "alembic>=1.13,<2",
  "httpx>=0.27,<1",
  "orjson>=3.10,<4",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "sqlalchemy>=2.0,<3",
  "tenacity>=8.5,<9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "ruff>=0.6,<1",
  "mypy>=1.11,<2"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
