[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-chat-bot"
version = "0.2.0"
description = "Telegram AI bot using aiogram 3 and OpenRouter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13,<4",
  "aiosqlite>=0.20,<1",
  "httpx>=0.27,<1",
  "orjson>=3.10,<4",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "tenacity>=8.5,<9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "respx>=0.21,<1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
